# tapmatic

./: Cargo.toml  app.rc  build.rs
src/: audio.rs  executor.rs  hotkey.rs  input.rs  macro_def.rs  main.rs  persistence.rs  recorder.rs  state.rs  ui.rs
