[workspace]
members = ["."]

[package]
name = "tapmatic"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
# rodio is Windows-only (requires ALSA on Linux which is not always available)

serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
rodio = { version = "0.22", default-features = false, features = ["playback"] }
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_SystemInformation",
    "Win32_Media",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
]}

[build-dependencies]
embed-resource = "3.0"

[profile.release]
opt-level = 3
lto = true
